--- a/views/user/contact_us.ejs
+++ b/views/user/contact_us.ejs
@@ -14,7 +14,7 @@
       </div>
 
       <%- include("./../layout/contact/meet_the_owners.ejs") %>
-      <div style="padding:0%;background:white;padding-left:0%">
+      <div class="our_clients_contact_wrapper">
         <%- include("./../layout/out_clients.ejs") %>
       </div>
 
