--- a/public/assets/css/about.css
+++ b/public/assets/css/about.css
@@ -28,8 +28,8 @@
 .what_we_do_container{
   height:700px !important;
 }
-.about_description{
-  margin-top:-5% !important;
+.description_owner{
+  margin-top:-5% ;
 }
   .text-container{
     height:500px !important;
@@ -96,5 +96,8 @@
       max-width:0% !important;
       flex:0% !important;
 
+  }
+  .description_owner{
+      margin-top:0% !important ;
   }
 }
