--- a/views/layout/contact/meet_the_owners.ejs
+++ b/views/layout/contact/meet_the_owners.ejs
@@ -6,11 +6,11 @@
     <div class="col-10">
         <div class='row'>
 
-            <div class="col-6 mobile-col-12">
+            <div class="col-6 mobile-col-12 landscape-col-6">
               <img class ="width-100" src = "./assets/images/2.png" />
               <p class="owner_name margin-top-5 akrobat font-30 white text-center">Marco Khodr </p>
             </div>
-            <div class="col-6 mobile-col-12 mobile-text-center about_description mobile-font-16 mission_text_size mobile-font-18 akrobat white  font-25 ">
+            <div class="col-6 mobile-col-12 landscape-col-6 description_owner mobile-text-center about_description mobile-font-16 mission_text_size mobile-font-18 akrobat white  font-25 ">
               A business that looks well maintained is successful.
               Our company specializes in cleaning windows to lessen your workload while making your business aesthetic look in top shape. Our services will be cost-effective to you and we are very flexible in our scheduling so we can come at the best days for you.
               Once you hire us, you can trust we will fully take care of any problem and spend time around the clock to make sure you can spend time on the things that matter the most.
