--- a/views/layout/contact/new_what_we_do.ejs
+++ b/views/layout/contact/new_what_we_do.ejs
@@ -2,7 +2,7 @@
 
 
       <div class="what_we_do_inner we_clean_inner width-100  padding-bottom-10">
-        <p class="text-banner white font-60 mobile-font- mobile-text-center text-left width-40 mobile-width-100 mobile-margin-left-0" style="font-size:60px">     What We Clean </p>
+        <p class="text-banner white font-60 mobile-font- mobile-text-center text-left width-40 mobile-width-100 mobile-margin-left-0" >     What We Clean </p>
 
         <div class="row mobile-margin-top-5">
           <div class="col-6 mobile-col-12 padding-bottom-10">
