--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -1,35 +1,15 @@
-
-    <!DOCTYPE html>
-    <html lang="en" dir="ltr">
-      <head>
-        <meta charset="utf-8">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Allerta+Stencil&family=Archivo+Black&family=Exo:wght@800;900&family=Heebo:wght@800&family=Merienda+One&family=Montserrat&family=Noto+Sans:wght@300&family=Poppins:wght@600&family=Roboto+Condensed:wght@300;400&family=Roboto:ital,wght@0,300;1,100&family=Rubik+Distressed&family=Rubik+Moonrocks&family=Teko:wght@300;500&family=Vast+Shadow&family=Work+Sans:wght@200;300;400&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel="stylesheet" type="text/css" href="assets/css/home.css" />
-        <link rel="stylesheet" type="text/css" href="assets/css/admin_home.css" />
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@1,600&family=Work+Sans:wght@300&display=swap" rel="stylesheet">
-
-          <title><%= pageTitle %></title>
-      </head>
-
-
-
-      <body>
+<%- include("./layout/head.ejs") %>
 
         <div class="container-fluid home_page">
 
           <div class="row">
-              <div class="col-12" style="padding:2%;background:#1a416f"></div>
+              <div class="col-12 padding-2 background-1a"></div>
           </div>
 
-          <p class="admin_home_title" style="font-size:20px;font-family:'Roboto';margin-top:2.5%;margin-left:2.5%;font-weight:bold"> Overview </p>
+          <p class="admin_home_title font-20 akrobat margin-top-2_5 margin-left-2_5 bold" > Overview </p>
 
-          <div class="schedule_admin_container"style="box-shadow:2px 2px 3px 4px #e6e6e6; padding:5%;padding-top:2.5%;padding-bottom:2.5%">
-            <p class="admin_home_subtitle"style="font-size:20px;font-family:'Roboto';font-weight:bold"> Online Quotes </p>
+          <div class="schedule_admin_container dark-shadow padding-5 padding-top-2_5 padding-bottom-2_5  ">
+            <p class="admin_home_subtitle akrobat font-20 bold"> Online Quotes </p>
             <div class="row">
 
               <div clas="col-10">
@@ -39,55 +19,71 @@
 
                         <% }else{ %>
                         <% for (let quote of quotes){%>
-                          <li class="list_item_schedule row" style="border:2px solid #e6e6e6;padding:2.5%">
+                          <li class="list_item_schedule row padding-2 dark-shadow relative" quote_id = <%= quote._id %>>
                             <div class="col-6">
-                              <p class="list_item_name"style="font-size:16px;font-family:'Roboto';"> <%= "Name: "+quote.name %></p>
+                              <p class="list_item_name font-16 akrobat"> <%= "Name: "+quote.name %></p>
                             </div>
                             <div class="col-6">
-                              <p class="list_item_name"style="font-size:16px;font-family:'Roboto'"> Windows: <%= quote.windowCount.toString() %></p>
+                              <p class="list_item_name font-16 akrobat"> Small (qty) : <%= quote.windows[0].total_windows %></p>
                             </div>
                             <div class="col-6">
-                              <p class="list_item_name"style="font-size:16px;font-family:'Roboto'"> Date: <%= quote.date %></p>
+                              <p class="list_item_name font-16 akrobat"> Medium (qty): <%= quote.windows[1].total_windows %></p>
                             </div>
                             <div class="col-6">
-                              <p class="list_item_name"style="font-size:16px;font-family:'Roboto'"> Time: <%= quote.time %></p>
+                              <p class="list_item_name font-16 akrobat"> Large (qty): <%= quote.windows[2].total_windows %></p>
                             </div>
                             <div class="col-12">
-                              <p class="list_item_name"style="font-size:18px;font-family:'Roboto'"> Address: <%= quote.address %></p>
+                              <p class="list_item_name font-18 akrobat"> Screens (qty): <%= quote.windows[3].total_windows %></p>
                             </div>
+                            <div class="col-6">
+                              <p class="list_item_name font-18 akrobat"> Total: <%= quote.total %></p>
+                            </div>
+                            <div class="col-6">
+                              <p class="list_item_name font-18 akrobat"> Outside / Inside: <%= quote.outside %></p>
+                            </div>
+                              <div  class="option_button" >
 
+                              </div>
+                              <div  class="favorite_button" >
+                                  <img style="width:20px;height:20px;" src= "./../assets/images/fav.png"/>
+                              </div>
                           </li>
                         <%}%>
                         <%}%>
-                        <li class="list_item_schedule row" style="border:2px solid #e6e6e6;padding:1%;padding-top:2.5%">
+                        <% if(quotes.length > 0){ %>
+                        <li class="list_item_schedule row dark-shadow border-ea padding-2 padding-top-2_5" >
                           <div class="col-12">
-                            <p class="list_item_name"style="font-size:16px;font-family:'Roboto';text-align:center"> See More...</p>
+                            <p class="list_item_name font-16 akrobat text-center"> See More...</p>
                           </div>
 
                         </li>
+                      <%}%>
                   </ul>
+              </div>
+              <div class="col-2">
+                  <button class="btn btn-danger width-50 margin-top-5-neg margin-left-25 delete_quote_button"interactable=-1> Delete </button>
               </div>
             </div>
           </div>
 
 
-          <div class="schedule_admin_container"style="box-shadow:2px 2px 3px 4px #e6e6e6; margin-top:5%;padding:5%;padding-top:2.5%;padding-bottom:2.5%">
-            <p class="admin_home_subtitle"style="font-size:20px;font-family:'Roboto';font-weight:bold"> Website Data </p>
+          <div class="schedule_admin_container margin-top-5 padding-5 padding-top-2_5 padding-bottom-2_5 dark-shadow ">
+            <p class="admin_home_subtitle font-20 akrobat bold"> Website Data </p>
           </div>
 
-          <div class="schedule_admin_container"style="box-shadow:2px 2px 3px 4px #e6e6e6; margin-top:5%;padding:5%;padding-top:2.5%;padding-bottom:2.5%">
-            <p class="admin_home_subtitle"style="font-size:20px;font-family:'Roboto';font-weight:bold"> Planner </p>
+          <div class="schedule_admin_container dark-shadow margin-top-5 padding-5 padding-bottom-2_5 padding-top-2_5">
+            <p class="admin_home_subtitle font-20 akrobat bold"> Planner </p>
           </div>
 
-          <div class="schedule_admin_container"style="box-shadow:2px 2px 3px 4px #e6e6e6; margin-top:5%;padding:5%;padding-top:2.5%;padding-bottom:2.5%">
-            <p class="admin_home_subtitle"style="font-size:20px;font-family:'Roboto';font-weight:bold"> Sales </p>
+          <div class="schedule_admin_container padding-5 padding-top-2_5 padding-bottom-2_5 margin-top-5 dark-shadow">
+            <p class="admin_home_subtitle font-20 akrobat bold"> Sales </p>
           </div>
 
         </div>
 
-      <script>
-          document.getElementById('vid').play();
-      </script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.3.4/axios.min.js" integrity="sha512-LUKzDoJKOLqnxGWWIBM4lzRBlxcva2ZTztO8bTcWPmDSpkErWx0bSP4pdsjNH8kiHAUPaT06UXcb+vOEZH+HpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+      <script src = "./../assets/js/manage_quotes.js"></script>
 
     </body>
 
