--- a/public/assets/css/admin_home.css
+++ b/public/assets/css/admin_home.css
@@ -17,6 +17,10 @@
   margin-top:20%;
   background:white
 }
+.number_one{
+  border:2px solid yellow;
+  color:yellow
+}
 .active_option_button{
   border-radius:50%;height:8px;width:8px;margin-left:20%;
   margin-top:20%;
@@ -31,6 +35,10 @@
 }
 .favorite_button:hover{
   filter:invert(58%) sepia(63%) saturate(3267%) hue-rotate(325deg) brightness(103%) contrast(107%);
+}
+.active_fav{
+  filter:invert(58%) sepia(63%) saturate(3267%) hue-rotate(325deg) brightness(103%) contrast(107%) !important;
+
 }
 .delete_quote_button{
   background:none;
