--- a/views/admin/quote.ejs
+++ b/views/admin/quote.ejs
@@ -1,19 +1,18 @@
 <%- include("./layout/head.ejs") %>
 
-        <div class="container-fluid home_page">
+        <div class="container-fluid">
 
           <div class="row">
               <div class="col-12 padding-2 background-1a"></div>
           </div>
 
-          <p class="admin_home_title font-20 akrobat margin-top-2_5 margin-left-2_5 bold" > Overview </p>
+       <p class="admin_home_subtitle akrobat font-20 bold margin-left-15 margin-top-2_5 padding-left-2_5"> Online Quotes </p>
 
-          <div class="schedule_admin_container dark-shadow padding-5 padding-top-2_5 padding-bottom-2_5  ">
-            <p class="admin_home_subtitle akrobat font-20 bold"> Online Quotes </p>
+          <div class= "dark-shadow padding-bottom-2_5  ">
             <div class="row">
-
-              <div clas="col-10">
-                  <ul class="schedule_lists">
+              <div class="col-1"></div>
+              <div class="col-10">
+                  <ul class="schedule_lists margin-top-5">
                         <% if (quotes.length < 0) {%>
                             <p> No Quotes Yet..</p>
 
@@ -44,9 +43,9 @@
                               <div  class="option_button" >
 
                               </div>
-
-                                  <img class="favorite_button"  style="width:20px;height:20px;" src= "./../assets/images/fav.png" quote_id = <%= quote._id %> isFav = <%= quote.isFavorite %> />
-
+                             <div  class="favorite_button" quote_id = <%= quote._id %> isFav = <%= quote.isFavorite %> >
+                                  <img style="width:20px;height:20px;" src= "./../assets/images/fav.png"/>
+                              </div>
                           </li>
                         <%}%>
                         <%}%>
@@ -65,44 +64,3 @@
               </div>
             </div>
           </div>
-
-
-          <div class="schedule_admin_container margin-top-5 padding-5 padding-top-2_5 padding-bottom-2_5 dark-shadow ">
-            <p class="admin_home_subtitle font-20 akrobat bold"> Website Data </p>
-
-            <div class="row">
-              <div class="col-4">
-                <%- include("./layout/page_count.ejs") %>
-              </div>
-              <div class="col-2">
-                  <%- include("./layout/browser_count.ejs") %>
-              </div>
-              <div class="col-4">
-                  <%- include("./layout/root_count.ejs") %>
-              </div>
-
-
-
-          </div>
-
-
-
-          <div class="schedule_admin_container dark-shadow margin-top-5 padding-5 padding-bottom-2_5 padding-top-2_5">
-            <p class="admin_home_subtitle font-20 akrobat bold"> Planner </p>
-          </div>
-
-          <div class="schedule_admin_container padding-5 padding-top-2_5 padding-bottom-2_5 margin-top-5 dark-shadow">
-            <p class="admin_home_subtitle font-20 akrobat bold"> Sales </p>
-          </div>
-
-        </div>
-
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.3.4/axios.min.js" integrity="sha512-LUKzDoJKOLqnxGWWIBM4lzRBlxcva2ZTztO8bTcWPmDSpkErWx0bSP4pdsjNH8kiHAUPaT06UXcb+vOEZH+HpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
-      <script src = "./../assets/js/manage_quotes.js"></script>
-      <script async src="https://api.countapi.xyz/hit/cfswindows.com/56ce2f5b-45e5-470f-8d13-34084938dd33?callback=websiteVisits"></script>
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
-    </body>
-
-    </html>
