--- a/views/layout/modal.ejs
+++ b/views/layout/modal.ejs
@@ -18,7 +18,7 @@
                   </div>
 
                   <div class="after_box width-100 " style="height:200px;background:url('./assets/images/after_1.png')">
-                      <p class="text-banner mobile-width-80 width-40 float-right margin-top-50 mobile-margin-right-5 mobile-after mobile-font-20" style="margin-top:30%"> After </p>
+                      <p class="text-banner mobile-width-80 width-40 float-right margin-top-30 mobile-margin-right-5 mobile-after"> After </p>
                   </div>
 
                   </div>
@@ -31,7 +31,7 @@
 
           <p class="quote_title font-40  bold akrobat text-center margin-top-10 mobile-margin-top-20">Your Quote:</p>
 
-          <p class="quote_number font-25  bold akrobat text-center margin-top-15" style="margin-top:10%">$<%=modal.outside %> Inside or Outside</p>
+          <p class="quote_number font-25  bold akrobat text-center margin-top-10" >$<%=modal.outside %> Inside or Outside</p>
           <p class="quote_number font-25 margin-top-2_5 akrobat text-center ">$<%=modal.total_price %> Inside and Outside</p>
 
           <div class="quote_contact_us font-25 margin-top-2_5 akrobat text-center margin-top-10">
