--- a/public/assets/css/showcase.css
+++ b/public/assets/css/showcase.css
@@ -210,4 +210,10 @@
   .quotesheet_container{
     margin-top:50% !important
   }
+  .meet_owners_container{
+    margin-top: 50% !important;
+  }
+  .what_we_do_inners{
+    background:white !important;
+  }
  }
