--- a/public/assets/css/showcase.css
+++ b/public/assets/css/showcase.css
@@ -213,7 +213,7 @@
   .meet_owners_container{
     margin-top: 50% !important;
   }
-  .what_we_do_inners{
+  .mobile-background-white{
     background:white !important;
   }
  }
