--- a/views/layout/footer.ejs
+++ b/views/layout/footer.ejs
@@ -1,5 +1,5 @@
 <!-- Footer -->
-<footer class="text-center text-lg-start body-background white margin-top-5 relative">
+<footer class="text-center text-lg-start  white margin-top-5 relative">
   <!-- Section: Social media -->
   <section class="d-flex justify-content-center justify-content-lg-between ">
     <!-- Left -->
