--- a/views/admin/layout/meta/browser_count.ejs
+++ b/views/admin/layout/meta/browser_count.ejs
@@ -1,22 +1,26 @@
-<div class="row"style="border-radius:0px;border:2px solid #e6e6e6;padding:5%;height:250px;border-left:0px solid white">
-    <div class="col-6">
+<div class="row  browser_count_container">
+
+    <div class="col-3 margin-top-2_5">
         <img class="width-100 " src = "./../assets/images/chrome.png"/>
-        <br/>
+        <p class="akrobat text-center font-20"> Chrome </p>
         <p class="text-center font-20 akrobat margin-top-5"><%= meta.brow.chrome %></p>
     </div>
-    <div class="col-6">
+
+    <div class="col-3 margin-top-2_5">
         <img class="width-100" src = "./../assets/images/edge.png"/>
-          <br/>
+        <p class="akrobat text-center font-20"> Edge </p>
         <p class="text-center font-20 akrobat margin-top-5"><%= meta.brow.edge %></p>
     </div>
-    <div class="col-6">
+
+    <div class="col-3 margin-top-2_5">
         <img class="width-100" src = "./../assets/images/safari.png"/>
-          <br/>
+        <p class="akrobat text-center font-20"> Safari </p>
         <p class="text-center font-20 akrobat margin-top-5"><%= meta.brow.safari %></p>
     </div>
-    <div class="col-6">
+
+    <div class="col-3 margin-top-2_5">
         <img class="width-100" src = "./../assets/images/firefox.png"/>
-          <br/>
+        <p class="akrobat text-center font-20"> FireFox </p>
         <p class="text-center font-20 akrobat margin-top-5"><%= meta.brow.firefox %></p>
     </div>
 
