--- a/public/assets/css/admin_home.css
+++ b/public/assets/css/admin_home.css
@@ -2,6 +2,121 @@
 .option_button:hover{
   background:red !important;
 }
+.submit_user{
+  background:white;
+  border-color:white;
+  color:#38B6FF;
+}
+.page_count_row{
+  border-radius:0px;border:2px solid #e6e6e6;padding:5%;height:250px
+}
+.modal_schedule{
+  position:absolute;
+  top:5%;
+  width:100%;
+  z-index:-2;
+  left:0%;
+  padding:5%;
+  transition: all .5s;
+  opacity:0;
+
+  transform:translateY(300px);
+}
+.root_count_row{
+  border-radius:0px;border:2px solid #e6e6e6;border-left:0px solid white;padding:2.5%;padding-bottom:5%
+}
+.fav_icon{
+
+  width:20px;height:20px
+}
+.modal_show{
+  border:1px solid #e6e6e6e; border-radius:10px;padding-top:2.5%;padding-bottom:2.5%;
+}
+.schedule_submit_button{
+  background:#38B6FF;
+  color:white;
+  font-family: "Akrobat";
+}
+.edit_schedule_form_control{
+  border:none !important;
+  border-radius:0px !important;
+  border-bottom: 1px solid black !important;
+  padding-bottom:2.5%;
+}
+.edit_schedule_form_control:focus{
+  border-bottom: 2px solid #38B6FF !important;
+  transition: all .5s;
+  box-shadow:none !important;
+  background:none !important
+
+}
+.edit_schedule_form_control:hover{
+  border-bottom: 2px solid #38B6FF !important;
+  transition: all .2s;
+
+}
+.modal_show{
+  background:white;
+}
+.modal_schedule_active{
+  transform:translateY(0px);
+  transition: all .5s;
+  opacity:1;
+}
+.overlay_edit{
+  position:absolute;top:0;left:0;width:100%;height:1920px;background:black;z-index:9;opacity:.7;
+}
+.add_user_modal{
+  position: relative;
+  padding:2%;
+  z-index:-9;
+  transform: translateY(-200px);
+  top:20%;
+  width:100%;
+  background:#38B6FF;
+  transition: all .5s;
+}
+.edit_button_schedule{
+  position:absolute;width:10%;top:1%;right:0%;
+}
+#userModal{
+  position:absolute;top:-2.5% !important;padding:2%;width:50%;margin-left:25%;visibility: hidden;
+}
+.browser_count_container{
+  border-radius:0px;border:2px solid #e6e6e6;padding:5%;height:250px;border-left:0px solid white
+}
+.add_box_schedule{
+  border:2px solid #e6e6e6;padding:10%;height:30vh !important;
+}
+.table_schedule_page{
+  width:100%;border:2px solid #e6e6e6;height:90vh
+}
+.schedule_submit{
+  width:100%;height:7.5vh;margin-left:3%;border:2px solid #e6e6e6;
+}
+.cell{
+  background:#38B6FF;color:white !important;
+}
+.overlay_container{
+  position:relative;z-index:9
+}
+.active_user_modal{
+  top:20% !important;
+  transition: all .5s;
+  transform: translateY(0px);
+z-index:999 !important;
+visibility: visible;
+  visibility: visible !important;
+}
+.add_box{
+  border:2px solid #e6e6e6;
+}
+.add_box_big_active{
+  border:3px solid yellow !important;
+}
+.add_box_big{
+  border:2px solid #e6e6e6;padding:10%;
+}
 .option_button{
   position:absolute;
   right:5%;
@@ -16,6 +131,19 @@
   border-radius:50%;height:8px;width:8px;margin-left:17.5%;
   margin-top:20%;
   background:white
+}
+.add_box{
+  transform:translateY(0px);
+  transition: all .5s;
+}
+.add_box{
+  border:2px solid #e6e6e6;padding:20%;height:50vh
+}
+.add_box:hover{
+    transform:translateY(-20px);
+    transition: transform .5s;
+    background:#38B6FF;
+
 }
 .number_one{
   border:2px solid yellow;
@@ -43,21 +171,91 @@
 .delete_quote_button{
   background:none;
   color:#FF5757;
+  border-radius:0px;
   border-color:#FF5757 !important;
-  margin-top:-30%;
   visibility: hidden;
+
 }
 .active_quote_button{
   visibility: visible !important;
 }
+.text-quote-col{
 
+  margin-top:10%;
+}
+.subtitle_quote{
+  text-align: center;
+  font-size:25px;
+  font-family: "akrobat";
+}
+.text_quote_box{
+  margin-left:25%;
+}
+.title_quote{
+  font-size:40px;
+  text-align: center;
+  font-family: "Akrobat";
+}
+.see_more_quotes{
+  background:#38B6FF;
+  color:white;
+  font-family: "akrobat";
+  border:2px solid #e6e6e6;
+}
 .delete_quote_button:hover{
   background:#FF5757 !important;
   color:white;
 }
 
+.list_item_schedule{
+  margin-top:2.5%;
+}
 
+.height-30px{
+  height:30px
+}
+.root_page{
+  transform:translateY(0px);
+  transition: all .5s;
+  background:gold;color:white;height:30vh;padding:5%
+
+}
+.submit_user{
+  background:#38B6FF !important;
+  color:white !important;
+
+}
+.submit_user:hover{
+  background:white !important;
+  color:#38B6FF !important;
+transition: all .5s;
+}
+.root_views_box{
+  background:white;border-radius:50%;margin-left:25%;height:12vh;width:50%
+}
+.root_page:hover{
+  transform:translateY(-10px);
+  transition: all .5s;
+}
+.inline{
+  display: inline;
+}
 .active_delete{
   background:#FF5757 !important;
   color:white;
+}
+
+.completed_button_image{
+  width:10%;float:left;display:inline
+}
+.complete_quote_button{
+  border-radius:none;
+  height:5vh;
+}
+td{
+  border-bottom:none !important;
+}
+
+.schedule_admin_container{
+  width:100%;
 }
