--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -2,93 +2,64 @@
 
         <div class="container-fluid home_page">
 
+          <div class="overlay_container relative z-9"></div>
+
           <div class="row">
               <div class="col-12 padding-2 background-1a"></div>
           </div>
 
-          <p class="admin_home_title font-20 akrobat margin-top-2_5 margin-left-2_5 bold" > Overview </p>
+          <p class="admin_home_title  font-20 akrobat margin-left-2_5 bold margin-top-5" > Overview </p>
 
-          <div class="schedule_admin_container dark-shadow padding-5 padding-top-2_5 padding-bottom-2_5  ">
-            <p class="admin_home_subtitle akrobat font-20 bold"> Online Quotes </p>
+          <div class="schedule_admin_container  dark-shadow padding-left-2_5">
+
+            <p class="admin_home_subtitle akrobat font-20 bold  padding-top-2_5"> Online Quotes </p>
+
+            <%- include("./layout/quotes/edit_quotes.ejs") %>
+
             <div class="row">
 
-              <div clas="col-10">
-                  <ul class="schedule_lists">
-                        <% if (quotes.length < 0) {%>
-                            <p> No Quotes Yet..</p>
-
-                        <% }else{ %>
-                        <% for (let quote of quotes){%>
-                          <li class="list_item_schedule row padding-2 dark-shadow relative" quote_id = <%= quote._id %>>
-                            <div class="col-6">
-                              <p class="list_item_name font-16 akrobat"> <%= "Name: "+quote.name %></p>
-                            </div>
-                            <div class="col-6">
-                              <p class="list_item_name font-16 akrobat"> Small (qty) : <%= quote.windows[0].total_windows %></p>
-                            </div>
-                            <div class="col-6">
-                              <p class="list_item_name font-16 akrobat"> Medium (qty): <%= quote.windows[1].total_windows %></p>
-                            </div>
-                            <div class="col-6">
-                              <p class="list_item_name font-16 akrobat"> Large (qty): <%= quote.windows[2].total_windows %></p>
-                            </div>
-                            <div class="col-12">
-                              <p class="list_item_name font-18 akrobat"> Screens (qty): <%= quote.windows[3].total_windows %></p>
-                            </div>
-                            <div class="col-6">
-                              <p class="list_item_name font-18 akrobat"> Total: <%= quote.total %></p>
-                            </div>
-                            <div class="col-6">
-                              <p class="list_item_name font-18 akrobat"> Outside / Inside: <%= quote.outside %></p>
-                            </div>
-                              <div  class="option_button" >
-
-                              </div>
-
-                                  <img class="favorite_button"  style="width:20px;height:20px;" src= "./../assets/images/fav.png" quote_id = <%= quote._id %> isFav = <%= quote.isFavorite %> />
-
-                          </li>
-                        <%}%>
-                        <%}%>
-                        <% if(quotes.length > 0){ %>
-                        <li class="list_item_schedule row dark-shadow border-ea padding-2 padding-top-2_5" >
-                          <div class="col-12">
-                            <p class="list_item_name font-16 akrobat text-center"> See More...</p>
-                          </div>
-
-                        </li>
-                      <%}%>
-                  </ul>
+              <div clas="col-8">
+                  <%- include("./layout/quotes/quote.ejs") %>
               </div>
-              <div class="col-2">
-                  <button class="btn btn-danger width-50 margin-top-5-neg margin-left-25 delete_quote_button"interactable=-1> Delete </button>
+
+              <div class="col-4 text-quote-col">
+                   <%- include("./layout/quotes/total_quotes.ejs") %>
               </div>
+
             </div>
-          </div>
-
-
-          <div class="schedule_admin_container margin-top-5 padding-5 padding-top-2_5 padding-bottom-2_5 dark-shadow ">
-            <p class="admin_home_subtitle font-20 akrobat bold"> Website Data </p>
-
-            <div class="row">
-              <div class="col-4">
-                <%- include("./layout/page_count.ejs") %>
-              </div>
-              <div class="col-2">
-                  <%- include("./layout/browser_count.ejs") %>
-              </div>
-              <div class="col-4">
-                  <%- include("./layout/root_count.ejs") %>
-              </div>
-
-
 
           </div>
 
+          <div class="schedule_admin_container margin-top-5 dark-shadow ">
 
+              <p class="admin_home_subtitle font-20 akrobat bold padding-left-2_5 padding-top-5"> Website Data </p>
+
+              <div class="row">
+
+                <div class="col-8">
+                  <%- include("./layout/meta/page_count.ejs") %>
+                </div>
+
+                <div class="col-4">
+                    <%- include("./layout/meta/browser_count.ejs") %>
+                </div>
+
+                <div class="col-8">
+                    <%- include("./layout/meta/root_count.ejs") %>
+                </div>
+
+             </div>
+
+          </div>
 
           <div class="schedule_admin_container dark-shadow margin-top-5 padding-5 padding-bottom-2_5 padding-top-2_5">
+
             <p class="admin_home_subtitle font-20 akrobat bold"> Planner </p>
+
+            <%- include("./layout/labor/labor_boxes.ejs") %>
+
+            <%- include("./layout/labor/add_laborer.ejs") %>
+
           </div>
 
           <div class="schedule_admin_container padding-5 padding-top-2_5 padding-bottom-2_5 margin-top-5 dark-shadow">
@@ -97,12 +68,4 @@
 
         </div>
 
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.3.4/axios.min.js" integrity="sha512-LUKzDoJKOLqnxGWWIBM4lzRBlxcva2ZTztO8bTcWPmDSpkErWx0bSP4pdsjNH8kiHAUPaT06UXcb+vOEZH+HpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
-      <script src = "./../assets/js/manage_quotes.js"></script>
-      <script async src="https://api.countapi.xyz/hit/cfswindows.com/56ce2f5b-45e5-470f-8d13-34084938dd33?callback=websiteVisits"></script>
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
-    </body>
-
-    </html>
+      <%- include("./layout/end.ejs")%>
