--- a/views/admin/layout/head.ejs
+++ b/views/admin/layout/head.ejs
@@ -9,8 +9,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Allerta+Stencil&family=Archivo+Black&family=Exo:wght@800;900&family=Heebo:wght@800&family=Merienda+One&family=Montserrat&family=Noto+Sans:wght@300&family=Poppins:wght@600&family=Roboto+Condensed:wght@300;400&family=Roboto:ital,wght@0,300;1,100&family=Rubik+Distressed&family=Rubik+Moonrocks&family=Teko:wght@300;500&family=Vast+Shadow&family=Work+Sans:wght@200;300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
-
     <link rel="stylesheet" type="text/css" href="./../assets/css/contact.css" />
     <link rel="stylesheet" type="text/css" href="./../assets/css/cfs_modal.css" />
     <link rel="stylesheet" type="text/css" href="./../assets/css/navbar.css" />
@@ -21,13 +19,13 @@
     <link rel="stylesheet" type="text/css" href="./../assets/css/util.css" />
     <link rel="stylesheet" type="text/css" href="./assets/css/util_mobile.css" />
     <link rel="stylesheet" type="text/css" href="./../assets/css/general.css" />
-        <link rel="stylesheet" type="text/css" href="./../assets/css/admin_home.css" />
+    <link rel="stylesheet" type="text/css" href="./../assets/css/admin_home.css" />
     <style>body{background:white !important}</style>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.5.0/components/header.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@1,600&family=Work+Sans:wght@300&display=sw ap" rel="stylesheet">
-    <title><%= pageTitle %></title>
+    <title>Admin Page</title>
     <link rel="stylesheet" type="text/css" href="assets/css/home.css" />
     <link rel="stylesheet" type="text/css" href="assets/css/admin_home.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
