--- a/views/admin/layout/meta/page_count.ejs
+++ b/views/admin/layout/meta/page_count.ejs
@@ -1,12 +1,16 @@
 
-<div class="row " style="border-radius:0px;border:2px solid #e6e6e6;padding:5%;height:250px">
+<div class="row page_count_row " >
+
     <div class="col-1"></div>
+
     <div class="col-5 relative">
       <p class="text-center akrobat font-30"> Total Page Count </p>
       <p class="text-center akrobat font-30"> <%= meta.views.total_views %> </p>
     </div>
+
     <div class="col-5 relative">
       <p class="text-center  akrobat font-30"> Unique Visitors </p>
       <p class="text-center  akrobat font-30"> <%= meta.views.unique_views %> </p>
     </div>
+
 </div>
