--- a/views/user/contact_us.ejs
+++ b/views/user/contact_us.ejs
@@ -1,5 +1,5 @@
 
-<%- include("./../layout/head.ejs") %>
+<%- include("./layout/head.ejs") %>
 
   <div id="wrapper" class="<%=lock %> ">
 
@@ -10,15 +10,15 @@
       </div>
 
       <div class="showcase-container relative width-100">
-        <%- include("./../layout/new_showcase.ejs") %>
+        <%- include("./layout/new_showcase.ejs") %>
       </div>
 
-      <%- include("./../layout/contact/meet_the_owners.ejs") %>
+      <%- include("./layout/contact/meet_the_owners.ejs") %>
       <div class="our_clients_contact_wrapper">
-        <%- include("./../layout/out_clients.ejs") %>
+        <%- include("./layout/out_clients.ejs") %>
       </div>
 
-      <%- include("./../layout/contact/what_we_do.ejs") %>
+      <%- include("./layout/contact/what_we_do.ejs") %>
 
 
     </div>
@@ -26,7 +26,7 @@
   </div>
 
   <div class="margin-top-5-neg">
-  <%- include("./../layout/footer.ejs") %>
+  <%- include("./layout/footer.ejs") %>
   </div>
-  <%- include("./../layout/end.ejs") %>
+  <%- include("./layout/end.ejs") %>
   <script src = "./assets/js/contact_showcase.js"></script>
