--- a/views/user/schedule.ejs
+++ b/views/user/schedule.ejs
@@ -1,8 +1,8 @@
-<%- include("./../layout/head.ejs") %>
+<%- include("./layout/head.ejs") %>
 
 <div id="wrapper" class="<%=lock %> ">
 
-    <%- include("./../layout/modal.ejs") %>
+    <%- include("./layout/modal.ejs") %>
 
     <div class="container-fluid " >
 
@@ -11,7 +11,7 @@
       </div>
 
       <div class="showcase-container relative width-100">
-        <%- include("./../layout/new_showcase.ejs") %>
+        <%- include("./layout/new_showcase.ejs") %>
       </div>
 
 
@@ -19,18 +19,18 @@
 
     <br />
 
-    <%- include("./../layout/quote/quote_sheet.ejs") %>
+    <%- include("./layout/quote/quote_sheet.ejs") %>
 
     <br />
 
-    <%- include("./../layout/quote/before_and_after.ejs") %>
+    <%- include("./layout/quote/before_and_after.ejs") %>
 
 </div>
 
 <div class="margin-top-5-neg">
-<%- include("./../layout/footer.ejs") %>
+<%- include("./layout/footer.ejs") %>
 </div>
 
 
-<%- include("./../layout/end.ejs") %>
+<%- include("./layout/end.ejs") %>
 <script src = "./assets/js/quote_showcase.js"></script>
