--- a/views/user/about_us.ejs
+++ b/views/user/about_us.ejs
@@ -1,5 +1,5 @@
 
-<%- include("./../layout/head.ejs") %>
+<%- include("./layout/head.ejs") %>
 
 <div id="wrapper" class="<%=lock %> ">
 
@@ -10,18 +10,18 @@
     </div>
 
     <div class="showcase-container relative width-100">
-      <%- include("./../layout/new_showcase.ejs") %>
+      <%- include("./layout/new_showcase.ejs") %>
     </div>
 
-    <%- include("./../layout/about/mission.ejs") %>
-    <%- include("./../layout/about/values.ejs") %>
-    <%- include("./../layout/about/what_we_do.ejs") %>
+    <%- include("./layout/about/mission.ejs") %>
+    <%- include("./layout/about/values.ejs") %>
+    <%- include("./layout/about/what_we_do.ejs") %>
 
 
   </div>
 
   <div class="margin-top-5-neg infinite-z relative" >
-    <%- include("./../layout/footer.ejs") %>
+    <%- include("./layout/footer.ejs") %>
   </div>
 
 
@@ -29,5 +29,5 @@
 
 
 
-<%- include("./../layout/end.ejs") %>
+<%- include("./layout/end.ejs") %>
 <script src = "./assets/js/about_showcase.js"></script>
