--- a/views/user/layout/new_showcase.ejs
+++ b/views/user/layout/new_showcase.ejs
@@ -3,16 +3,19 @@
   <div class="row relative">
 
       <div class="col-4 no-pad relative no-background z-99 logo_col">
+
           <div class=" foreground width-50 padding-left-2_5 margin-left-2_5 logo_container light-blue-background">
             <img src = "./assets/images/logo.png"class="width-100" />
           </div>
-          <div class="background width-50 text-container turquoise-background margin-left-2_5 height-712px mobile-height-600px absolute top--5">
-          </div>
+
+          <div class="background width-50 text-container turquoise-background margin-left-2_5 height-712px mobile-height-600px absolute top--5">  </div>
+
       </div>
 
   </div>
 
       <div class="intro-text-container width-80">
+
           <div class="padding-1 big-text-container-ani-1 mobile-width-80 margin-top-2_5 width-45 cfs-heading-background">
                 <p class="font-35 akrobat margin-top-2_5 margin-left-2_5 bold no-space white mobile-font-25"><%= showcase.heading_1 %></p>
           </div>
@@ -22,11 +25,14 @@
             </div>
 
         <div class="banners row relative">
+
             <div class="col-12">
+
               <div class='row relative'>
                 <div class="col-12 dark-blue-background padding-2 mobile-padding-5"></div>
                 <div class="col-9 padding-2 light-blue-background mobile-padding-5"></div>
               </div>
+
           </div>
 
         </div>
