--- a/views/user/layout/quote_form.ejs
+++ b/views/user/layout/quote_form.ejs
@@ -1,57 +1,86 @@
 
 <div class="absolute width-30 mobile-width-80 z-99 white-background padding-2 mobile-padding-5 home_quote_container">
+
   <div class="row">
+
       <div class="col-12">
-        <div class="quotesheet_container width-100" >
-<p class="quotesheet_title text-center akrobat font-25 bold">Make Your Windows Shine Today!</p>
 
-<form action="/modal" method="POST">
+          <div class="quotesheet_container width-100" >
 
-<div class="row padding-bottom-5">
-  <div class="col-12 padding-top-5">
-      <label>
-          Full Name
-      </label>
-      <input class="form-control quote_input akrobat no-radius black-bottom-border font-20 no-border" name="firstName" placeholder="Enter first name" />
+              <p class="quotesheet_title text-center akrobat font-25 bold">Make Your Windows Shine Today!</p>
+
+            <form action="/modal" method="POST">
+
+              <div class="row padding-bottom-5">
+
+                  <div class="col-12 padding-top-5">
+
+                      <label>
+                          Full Name
+                      </label>
+
+                      <input class="form-control quote_input akrobat no-radius black-bottom-border font-20 no-border" name="firstName" placeholder="Enter first name" />
+
+                  </div>
+
+                  <div class="col-6 padding-top-5">
+
+                    <label>
+                        Screen Count
+                    </label>
+
+                    <input class="form-control quote_input no-border black-bottom-border no-radius akrobat font-20"  type="number" name="screenCount" placeholder="Screen Count" />
+
+                  </div>
+
+                  <div class="col-6 padding-top-5">
+
+                    <label>
+                        < 4X4 Ft
+                    </label>
+
+                    <input class="form-control quote_input no-border black-bottom-border no-radius akrobat font-20"  type="number" name="smWindowCount" placeholder="Window Count" />
+
+                  </div>
+
+                  <div class="col-6 padding-top-5">
+
+                    <label>
+                        4X4 to 8X8 Ft
+                    </label>
+
+                    <input class="form-control quote_input no-border black-bottom-border no-radius akrobat font-20"  type="number" name="mdWindowCount" placeholder="Window Count" />
+
+                  </div>
+
+                  <div class="col-6 padding-top-5">
+
+                      <label>
+                          > 8X8 Ft
+                      </label>
+
+                      <input class="form-control quote_input no-border black-bottom-border no-radius akrobat font-20"  type="number" name="lgWindowCount" placeholder="Window Count" />
+
+                    </div>
+
+                  <div class="col-6 padding-top-5">
+                      <input type="hidden" name="key" value = <%= active_path %> placeholder="Enter first name" />
+                  </div>
+
+                  <div class="col-3"></div>
+
+                <div class="col-12 ">
+                  <button class="width-100 margin-top-10 margin-bottom-5 btn white black-background"type="submit"> Receive Quote</button>
+                </div>
+
+                <div class='col-3'></div>
+
+              </form>
+
+           </div>
+
+      </div>
+
   </div>
 
-  <div class="col-6 padding-top-5">
-      <label>
-          Screen Count
-      </label>
-      <input class="form-control quote_input no-border black-bottom-border no-radius akrobat font-20"  type="number" name="screenCount" placeholder="Screen Count" />
-  </div>
-  <div class="col-6 padding-top-5">
-      <label>
-          < 4X4 Ft
-      </label>
-      <input class="form-control quote_input no-border black-bottom-border no-radius akrobat font-20"  type="number" name="smWindowCount" placeholder="Window Count" />
-  </div>
-  <div class="col-6 padding-top-5">
-      <label>
-          4X4 to 8X8 Ft
-      </label>
-      <input class="form-control quote_input no-border black-bottom-border no-radius akrobat font-20"  type="number" name="mdWindowCount" placeholder="Window Count" />
-  </div>
-  <div class="col-6 padding-top-5">
-      <label>
-          > 8X8 Ft
-      </label>
-      <input class="form-control quote_input no-border black-bottom-border no-radius akrobat font-20"  type="number" name="lgWindowCount" placeholder="Window Count" />
-  </div>
-  <div class="col-6 padding-top-5">
-      <input type="hidden" name="key" value = <%= active_path %> placeholder="Enter first name" />
-  </div>
-  <div class="col-3"></div>
-
-  <div class="col-12 ">
-    <button class="width-100 margin-top-10 margin-bottom-5 btn white black-background"type="submit"> Receive Quote</button>
-  </div>
-
-  <div class='col-3'></div>
-
-  </form></div>
-    </div>
-
-  </div>
 </div>
